Aws/Internet_Gateway.tf
resource "aws_internet_gateway" "my_gw" {
  
  vpc_id = "${aws_vpc.my_vpc.id}"

  tags = {
  
    Name = "my_gw"

  }

}
